--- a/style.css
+++ b/style.css
@@ -1,75 +1,138 @@
 /* resets */
 h1,
 ul {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	font-family: "Open Sans", sans-serif;
-	margin: 20px;
+  font-family: "Open Sans", sans-serif;
+  margin: 20px;
 }
 
 .company {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 .header-nav-list {
-	list-style: none;
+  list-style: none;
 }
 
 .header-nav-li {
-	margin: 5px 0;
+  margin: 5px 0;
 }
 
 .header-nav {
-	color: #69696a;
-	padding: 5px 0;
+  color: #69696a;
+  padding: 5px 0;
 }
 
 .link {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .button {
-	display: block;
-	color: white;
-	background-color: black;
-	border-radius: 10px;
-	padding: 5px;
-	text-align: center;
+  display: block;
+  color: white;
+  background-color: black;
+  border-radius: 20px;
+  padding: 5px;
+  text-align: center;
 }
 
 .about-text {
-	border-left: 3px solid #69696a;
-	padding-left: 10px;
-	color: #69696a;
+  border-left: 3px solid #69696a;
+  padding-left: 10px;
+  color: #69696a;
+}
+
+.colored-circles {
+  display: none;
 }
 
 .footer {
-	position: fixed;
-	bottom: 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	left: 0;
-	width: 100%;
-	background-color: rgba(247, 193, 162, 0.7);
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  left: 0;
+  width: 100%;
+  background-color: rgba(247, 193, 162, 0.7);
 }
 
 .footer-company {
-	margin-left: 20px;
+  margin-left: 20px;
 }
 
 .footer-nav {
-	margin-right: 20px;
+  margin-right: 20px;
 }
 
 .footer-nav-list {
-	display: flex;
-	list-style: none;
+  display: flex;
+  list-style: none;
 }
 
 .footer-link {
-	padding: 5px;
+  padding: 5px;
+  color: #69696a;
+}
+
+@media only screen and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-nav-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-nav-li {
+    padding: 5px;
+  }
+
+  .main-content {
+    display: flex;
+    margin-top: 100px;
+  }
+  .text-content {
+    flex: 1;
+  }
+  .colored-circles {
+    display: initial;
+    flex: 1;
+    position: relative;
+  }
+
+  .large {
+    position: absolute;
+    border-radius: 50%;
+    top: 40px;
+    right: 70px;
+    width: 175px;
+    height: 175px;
+    background-color: rgba(247, 136, 167, 0.6);
+  }
+  .medium {
+    position: absolute;
+    border-radius: 50%;
+    right: 10px;
+    top: 150px;
+    width: 150px;
+    height: 150px;
+    background-color: rgba(247, 193, 162, 0.7);
+  }
+  .small {
+    position: absolute;
+    border-radius: 50%;
+    top: 65px;
+    right: 10px;
+    bottom: 20px;
+    width: 115px;
+    height: 115px;
+    background-color: rgba(207, 130, 213, 0.6);
+  }
 }
